macos bugfixes: #151 dark mode detection in night shift + adding menubar to extensions menu + padding-left with tabs to give traffic lights space

--- a/repo/core/css/menu.css
+++ b/repo/core/css/menu.css
@@ -117,6 +117,9 @@ s {
 #titlebar .window-buttons-area:empty {
   display: none;
 }
+[data-platform='darwin'] #titlebar {
+  height: 2.65em;
+}
 
 /* alerts */
 
